--- a/past_meetups.yaml
+++ b/past_meetups.yaml
@@ -1,5 +1,6 @@
 - date: 2017-10-17
   presenter: Travis Gerke
+  presenter_url: https://twitter.com/travisgerke
   topic: Inaugural Tampa R Users Meetup!
   link: https://github.com/TampaUseRs/TampaUseRs/tree/master/meetups/20171017-inaugural
 
@@ -10,6 +11,7 @@
 
 - date: 2018-01-23
   presenter: Garrick Aden-Buie
+  presenter_url: https://www.garrickadenbuie.com
   topic: A Gentle Guide to the Grammar of Graphics with ggplot2
   link: https://github.com/gadenbuie/trug-ggplot2
 
