Add 2018-06-19 to past presentations

--- a/past_meetups.yaml
+++ b/past_meetups.yaml
@@ -35,3 +35,9 @@
   topic: Integrating Python and R
   link: https://github.com/TampaUseRs/TampaUseRs/tree/master/meetups/20180529-python-and-r
   
+- date: 2018-06-19
+  presenter: Minh Pham
+  presenter_url: http://minhp.weebly.com
+  topic: Basic Machine Learning Techniques
+  link: https://github.com/TampaUseRs/TampaUseRs/tree/master/meetups/20180619-machine-learning
+  
