Fix typo in previous presenters

--- a/past_meetups.yaml
+++ b/past_meetups.yaml
@@ -42,7 +42,7 @@
   link: https://github.com/TampaUseRs/TampaUseRs/tree/master/meetups/20180619-machine-learning
   
 - date: 2018-07-24
-  presenter: Thomas keller
+  presenter: Thomas Keller
   presenter_url: http://thomas-keller.github.io
   topic: Analyzing Social Networks with rtweet and special guestr
   link: https://github.com/TampaUseRs/TampaUseRs/tree/master/meetups/20180724-twitter-networks
